# pandora_exploration

./: README.md
pandora_discovery/: CMakeLists.txt  package.xml
pandora_explorer/: CMakeLists.txt  package.xml
pandora_explorer/config/: FrontierCostFunctions.cfg  coverage_costmap_params.yaml  exploration_controller_params.yaml  explore_costmap_params.yaml  frontier_exploration_params.yaml
pandora_explorer/include/pandora_explorer/: frontier_goal_selector.h
pandora_explorer/src/: exploration_controller.cpp  frontier_goal_selector.cpp  map_frontier_search.cpp
pandora_sensor_coverage/: package.xml
pandora_sensor_coverage/config/sensor_coverage/: sensor_coverage_params.yaml
pandora_sensor_coverage/include/pandora_sensor_coverage/: coverage_checker.h  sensor.h  space_checker.h  space_checker.hxx  utils.h
pandora_sensor_coverage/include/sensor_coverage/: coverage_checker.h  sensor.h  sensor_coverage.h  space_checker.h  space_checker.hxx  surface_checker.h
pandora_sensor_coverage/launch/: sensor_coverage.launch
pandora_sensor_coverage/src/: coverage_checker.cpp  sensor.cpp  sensor_coverage.cpp  surface_checker.cpp
